# CppVoxelRasterization

./: CMakeLists.txt  LICENSE  README.md  main.cpp
2DMeshing/: GridMeshing.cpp  GridMeshing.hpp  PixelGrid.cpp  PixelGrid.hpp
Math/: Quaternion.hpp  Vector3.cpp  Vector3.hpp
Meshes/: Quad.cpp  Quad.hpp
Toolkit/: ObjExporter.cpp  ObjExporter.hpp
examples/CPPLearning_Scratch/: Makefile  TwoDArray.cpp  TwoDArray.h  main  main.cpp  main2.cpp
examples/Debug_and_tests/: Debug_and_tests  Makefile  main.cpp
examples/tests/: TwoDArray.cpp  main.cpp
src/: Makefile
src/2DMeshing/: PixelGrid.hpp
src/Core/: Chunk.cpp  DisjointSet.cpp  DisjointSet.hpp
src/Guard/: Guard.cpp  Guard.hpp
src/Math/: Quaternion.cpp
src/Meshes/: Mesh.cpp  Mesh.hpp
src/public_headers/: Chunk.hpp  Int3.hpp  Mesh.hpp  MeshQuad.hpp  Optimizer.hpp  Toolbox.hpp  Voxel.hpp
